// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component Header - test Header Complex - snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "space-between",
      "marginVertical": 5,
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "height": 30,
        "marginHorizontal": 10,
        "width": 30,
      }
    }
  />
  <Text
    style={
      {
        "color": "#ffffff",
        "fontSize": 18,
        "fontWeight": "bold",
        "opacity": 0.87,
        "paddingHorizontal": 5,
        "textAlign": "center",
      }
    }
    testID="valuetransfer text"
  >
    title
  </Text>
  <View
    style={
      {
        "height": 30,
        "marginHorizontal": 10,
        "width": 30,
      }
    }
  />
</View>
`;

exports[`Component Header - test Header Simple - snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "space-between",
      "marginVertical": 5,
      "width": "100%",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <
      color="#18bd18"
      icon={
        {
          "icon": [
            320,
            512,
            [
              9001,
            ],
            "f053",
            "M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z",
          ],
          "iconName": "chevron-left",
          "prefix": "fas",
        }
      }
      size={24}
      style={
        {
          "marginHorizontal": 10,
        }
      }
    />
  </View>
  <Text
    style={
      {
        "color": "#ffffff",
        "fontSize": 18,
        "fontWeight": "bold",
        "opacity": 0.87,
        "paddingHorizontal": 5,
      }
    }
  >
    title
  </Text>
  <View
    style={
      {
        "height": 30,
        "marginHorizontal": 10,
        "width": 30,
      }
    }
  />
</View>
`;
